@startuml

title __DYNABLASTER's Class Diagram__\n

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.Display {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.Game {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.GameState {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.Handler {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.KeyManager {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.Map {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.MenuState {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.MouseManager {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.Scores {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      abstract class DynaBlaster.State {
      }
    }
  }
  

  namespace  {
    namespace ynaBlaster {
      class DynaBlaster.config {
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireDown {
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireLeft {
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireRight {
      }
    }
  }
  

  namespace  {
    namespace ire {
      class Fire.FireUp {
      }
    }
  }
  

  namespace  {
    class Launcher {
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.BrickWithNextLevelDoors {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.BrickWithSpeedUp {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.FireBoost {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.NextLevelEntity {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      abstract class SpecialEntities.SpecialEntity {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.SpecialEntityManager {
      }
    }
  }
  

  namespace  {
    namespace pecialEntities {
      class SpecialEntities.SpeedUpBoost {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Bomb {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Brick {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      abstract class entities.Creature {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Enemy {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      abstract class entities.Entity {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.EntityManager {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      class entities.Player {
      }
    }
  }
  

  namespace  {
    namespace ntities {
      abstract class entities.StaticEntity {
      }
    }
  }
  

  namespace  {
    namespace fx {
      class gfx.Animation {
      }
    }
  }
  

  namespace  {
    namespace fx {
      class gfx.Assets {
      }
    }
  }
  

  namespace  {
    namespace fx {
      class gfx.ImageLoader {
      }
    }
  }
  

  namespace  {
    namespace fx {
      class gfx.SpriteSheet {
      }
    }
  }
  

  namespace  {
    namespace iles {
      class tiles.GrassTile {
      }
    }
  }
  

  namespace  {
    namespace iles {
      class tiles.Tile {
      }
    }
  }
  

  namespace  {
    namespace iles {
      class tiles.WallTile {
      }
    }
  }
  

  DynaBlaster.Game .up.|> java.lang.Runnable
  DynaBlaster.Game o-- DynaBlaster.State : gameState
  DynaBlaster.Game o-- DynaBlaster.State : menuState
  DynaBlaster.Game o-- DynaBlaster.Display : display
  DynaBlaster.Game o-- DynaBlaster.Handler : handler
  DynaBlaster.Game o-- DynaBlaster.KeyManager : keyManager
  DynaBlaster.Game o-- DynaBlaster.MouseManager : mouseManager
  DynaBlaster.GameState -up-|> DynaBlaster.State
  DynaBlaster.GameState o-- DynaBlaster.Map : map
  DynaBlaster.Handler o-- DynaBlaster.Game : game
  DynaBlaster.Handler o-- DynaBlaster.Map : map
  DynaBlaster.KeyManager .up.|> java.awt.event.KeyListener
  DynaBlaster.KeyManager o-- DynaBlaster.Game : game
  DynaBlaster.KeyManager o-- DynaBlaster.Handler : handler
  DynaBlaster.Map o-- entities.EntityManager : entityManager
  DynaBlaster.Map o-- DynaBlaster.Handler : handler
  DynaBlaster.Map o-- SpecialEntities.SpecialEntityManager : specialEntityManager
  DynaBlaster.MenuState -up-|> DynaBlaster.State
  DynaBlaster.MouseManager .up.|> java.awt.event.MouseListener
  DynaBlaster.MouseManager .up.|> java.awt.event.MouseMotionListener
  DynaBlaster.State o-- DynaBlaster.Handler : handler
  Fire.FireDown -up-|> entities.StaticEntity
  Fire.FireDown o-- gfx.Animation : fireDown
  Fire.FireLeft -up-|> entities.StaticEntity
  Fire.FireLeft o-- gfx.Animation : fireLeft
  Fire.FireRight -up-|> entities.StaticEntity
  Fire.FireRight o-- gfx.Animation : fireRight
  Fire.FireUp -up-|> entities.StaticEntity
  Fire.FireUp o-- gfx.Animation : fireUp
  SpecialEntities.BrickWithNextLevelDoors -up-|> entities.StaticEntity
  SpecialEntities.BrickWithSpeedUp -up-|> entities.StaticEntity
  SpecialEntities.FireBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.NextLevelEntity -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.NextLevelEntity o-- entities.Player : player
  SpecialEntities.SpecialEntity o-- DynaBlaster.Handler : handler
  SpecialEntities.SpecialEntityManager o-- DynaBlaster.Handler : handler
  SpecialEntities.SpeedUpBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.SpeedUpBoost o-- entities.Player : player
  entities.Bomb -up-|> entities.StaticEntity
  entities.Bomb o-- gfx.Animation : boom
  entities.Brick -up-|> entities.StaticEntity
  entities.Creature -up-|> entities.Entity
  entities.Enemy -up-|> entities.Creature
  entities.Enemy o-- entities.Player : player
  entities.Enemy o-- gfx.Animation : enemyAnim_
  entities.Entity o-- DynaBlaster.Handler : handler
  entities.EntityManager o-- entities.Enemy : enemy
  entities.EntityManager o-- DynaBlaster.Handler : handler
  entities.Player -up-|> entities.Creature
  entities.Player o-- entities.Bomb : bomb
  entities.Player o-- gfx.Animation : animDown
  entities.Player o-- gfx.Animation : animLeft
  entities.Player o-- gfx.Animation : animRight
  entities.Player o-- gfx.Animation : animUp
  entities.StaticEntity -up-|> entities.Entity
  tiles.GrassTile -up-|> tiles.Tile
  tiles.WallTile -up-|> tiles.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
